[package]
name = "raftmem"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
description = "Embedded, replicated shared NumPy array demo"
readme = "README.md"

[lib]
name = "raftmem"

[dependencies]
tokio       = { version = "1", features = ["rt-multi-thread", "time"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
openraft    = { version = "0.9.18", features = ["serde"] }
tracing     = "0.1"



