[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "memblast"
version = "0.1.0"
requires-python = ">=3.8"
description = "Embedded, replicated shared NumPy array demo"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}

[tool.maturin]
bindings = "pyo3"
